--- a/cliff_walking.ipynb
+++ b/cliff_walking.ipynb
@@ -221,7 +221,7 @@
    "outputs": [],
    "source": [
     "class MDP:\n",
-    "    def init(self, max_iterations, discount_factor, cliff_positions):\n",
+    "    def __init__(self, max_iterations, discount_factor, cliff_positions):\n",
     "        self.tmp_V = np.zeros((4, 12))\n",
     "        self.V = np.zeros((4, 12))\n",
     "        self.Q = np.zeros((4, 12, 4))\n",
@@ -301,23 +301,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "< ^ ^ > < ^ > > > > ^ > \n",
-      "< V V > ^ < ^ > > < ^ > \n",
-      "< < ^ < ^ > V ^ > < ^ > \n",
-      "< V V V < ^ < ^ > ^ V ^ \n",
-      "\n",
-      "Wins = 0\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
+     "ename": "TypeError",
+     "evalue": "MDP() takes no arguments",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb Cell 5\u001b[0m line \u001b[0;36m8\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb#X43sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m current_state \u001b[39m=\u001b[39m (\u001b[39m3\u001b[39m, \u001b[39m0\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb#X43sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m wins \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb#X43sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m mdp \u001b[39m=\u001b[39m MDP(iter_of_mdp, gama, env\u001b[39m.\u001b[39;49mcliff_positions)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb#X43sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m mdp\u001b[39m.\u001b[39mrun()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb#X43sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m mdp\u001b[39m.\u001b[39mprint_pi()\n",
+      "\u001b[0;31mTypeError\u001b[0m: MDP() takes no arguments"
      ]
     }
    ],
