--- a/cliff_walking.ipynb
+++ b/cliff_walking.ipynb
@@ -230,6 +230,11 @@
     "        self.gama = discount_factor\n",
     "        self.cliffs = cliff_positions\n",
     "\n",
+    "        action_reward = -1\n",
+    "        goal_reward = 1000\n",
+    "        cliff_reward = -100\n",
+    "        out_reward = -10\n",
+    "\n",
     "    def update_QV(self):\n",
     "        di = [-1, 0, 1, 0]\n",
     "        dj = [0, 1, 0, -1]\n",
@@ -242,9 +247,9 @@
     "                            continue\n",
     "                        next_state = (i+di[action], j+dj[action])\n",
     "                        if next_state[0] >= 4 or next_state[1] >= 12 or next_state[0] < 0 or next_state[1] < 0:\n",
-    "                            self.Q[i, j, k] += -1/3\n",
+    "                            self.Q[i, j, k] += out_reward/3\n",
     "                            continue\n",
-    "                        self.Q[i, j, k] = self.Q[i, j, k] + (1/3*((-1) + self.gama*self.V[next_state[0], next_state[1]]))\n",
+    "                        self.Q[i, j, k] = self.Q[i, j, k] + (1/3*((action_reward) + self.gama*self.V[next_state[0], next_state[1]]))\n",
     "                        \n",
     "         \n",
     "        for i in range(4):\n",
@@ -265,9 +270,9 @@
     "                        \n",
     "\n",
     "    def run(self):\n",
-    "        self.V[3, 11] = 1000\n",
+    "        self.V[3, 11] = goal_reward\n",
     "        for ci, cj in self.cliffs:\n",
-    "            self.V[ci, cj] = -100\n",
+    "            self.V[ci, cj] = cliff_reward\n",
     "            \n",
     "        iter_cnt = 0\n",
     "        while iter_cnt < self.max_iter:\n",
