--- a/cliff_walking.ipynb
+++ b/cliff_walking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,9 +231,8 @@
     "        self.cliffs = cliff_positions\n",
     "\n",
     "        self.action_reward = -1\n",
-    "        self.goal_reward = 1000\n",
+    "        self.goal_reward = 10000\n",
     "        self.cliff_reward = -100\n",
-    "        self.out_reward = -10\n",
     "\n",
     "    def update_QV(self):\n",
     "        di = [-1, 0, 1, 0]\n",
@@ -241,15 +240,27 @@
     "        for i in range(4):\n",
     "            for j in range(12):\n",
     "                for k in range(4):\n",
+    "                    num = 0\n",
+    "                    for action in [UP, RIGHT, DOWN, LEFT]:\n",
+    "                        if k != action and action%2 == k%2:\n",
+    "                            continue\n",
+    "                        next_state = (i+di[action], j+dj[action])\n",
+    "                        if next_state[0] >= 4 or next_state[1] >= 12 or next_state[0] < 0 or next_state[1] < 0:\n",
+    "                            num += 1\n",
+    "                    prob = 1/3\n",
+    "                    if (num == 2):\n",
+    "                        prob = 1\n",
+    "                    elif (num == 1):\n",
+    "                        prob = 1/2\n",
+    "                    \n",
     "                    self.Q[i, j, k] = 0\n",
     "                    for action in [UP, RIGHT, DOWN, LEFT]:\n",
     "                        if k != action and action%2 == k%2:\n",
     "                            continue\n",
     "                        next_state = (i+di[action], j+dj[action])\n",
     "                        if next_state[0] >= 4 or next_state[1] >= 12 or next_state[0] < 0 or next_state[1] < 0:\n",
-    "                            self.Q[i, j, k] += self.out_reward/3\n",
     "                            continue\n",
-    "                        self.Q[i, j, k] = self.Q[i, j, k] + (1/3*((self.action_reward) + self.gama*self.V[next_state[0], next_state[1]]))\n",
+    "                        self.Q[i, j, k] = self.Q[i, j, k] + (prob*((self.action_reward) + self.gama*self.V[next_state[0], next_state[1]]))\n",
     "                        \n",
     "         \n",
     "        for i in range(4):\n",
@@ -302,14 +313,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^ ^ < ^ ^ > > ^ ^ < ^ > \n",
+      "^ > ^ V < ^ > < ^ > V > \n",
+      "V < ^ > V V > < < ^ > > \n",
+      "< < < ^ > > > < ^ V > ^ \n",
+      "\n",
+      "346.51\t351.02\t364.65\t-100.0\t-100.0\t1045.2\t2213.54\t2374.47\t2585.39\t2850.55\t-100.0\t9147.92\t\n",
+      "-100.0\t344.45\t387.65\t468.64\t517.75\t-100.0\t2099.34\t2142.14\t-100.0\t3175.33\t6874.69\t9241.33\t\n",
+      "296.19\t308.16\t-100.0\t517.75\t1203.32\t1650.27\t2009.0\t2020.57\t599.79\t-100.0\t8418.77\t9523.46\t\n",
+      "292.23\t296.19\t96.11\t-100.0\t1481.45\t1791.52\t1970.99\t1974.82\t-100.0\t4462.06\t9116.29\t10000.0\t\n",
+      "\n",
+      "Wins = 1\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the maximum number of iterations\n",
     "max_iter_number = 1000\n",
     "iter_of_mdp = 1000\n",
-    "gama = 0.9999\n",
+    "gama = 0.99\n",
     "current_state = (3, 0)\n",
     "wins = 0\n",
     "\n",
@@ -357,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
