add converged to class mdp

--- a/cliff_walking.ipynb
+++ b/cliff_walking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +53,6 @@
     "                        self._cliff[new_row, new_col] = False\n",
     "                        continue\n",
     "                    self.cliff_positions.append(state)\n",
-    "\n",
-    "        # Calculate transition probabilities and rewards خانه صخره قرار گیرد امتیاز -100 لحاظ\n",
     "\n",
     "        self.P = {}\n",
     "        for s in range(self.nS):\n",
@@ -205,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,30 +214,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "class MDP:\n",
     "    def __init__(self, max_iterations, discount_factor, cliff_positions):\n",
-    "        self.tmp_V = np.zeros((4, 12))\n",
     "        self.V = np.zeros((4, 12))\n",
     "        self.Q = np.zeros((4, 12, 4))\n",
     "        self.pi = np.zeros((4, 12), dtype=int)\n",
     "        self.max_iter = max_iterations\n",
     "        self.gama = discount_factor\n",
     "        self.cliffs = cliff_positions\n",
+    "        self.max_converged = 100\n",
     "\n",
     "        self.action_reward = -1\n",
     "        self.goal_reward = 10000\n",
     "        self.cliff_reward = -100\n",
     "\n",
+    "    \n",
     "    def update_QV(self):\n",
     "        di = [-1, 0, 1, 0]\n",
     "        dj = [0, 1, 0, -1]\n",
+    "        # update Q\n",
     "        for i in range(4):\n",
     "            for j in range(12):\n",
     "                for k in range(4):\n",
+    "                    \n",
     "                    num = 0\n",
     "                    for action in [UP, RIGHT, DOWN, LEFT]:\n",
     "                        if k != action and action%2 == k%2:\n",
@@ -260,9 +261,9 @@
     "                        next_state = (i+di[action], j+dj[action])\n",
     "                        if next_state[0] >= 4 or next_state[1] >= 12 or next_state[0] < 0 or next_state[1] < 0:\n",
     "                            continue\n",
-    "                        self.Q[i, j, k] = self.Q[i, j, k] + (prob*((self.action_reward) + self.gama*self.V[next_state[0], next_state[1]]))\n",
-    "                        \n",
-    "         \n",
+    "                        self.Q[i, j, k] += prob * (self.action_reward + self.gama * self.V[next_state[0], next_state[1]])\n",
+    "\n",
+    "        # update V\n",
     "        for i in range(4):\n",
     "            for j in range(12):\n",
     "                if i == 3 and j == 11:\n",
@@ -286,14 +287,24 @@
     "            self.V[ci, cj] = self.cliff_reward\n",
     "            \n",
     "        iter_cnt = 0\n",
-    "        while iter_cnt < self.max_iter:\n",
+    "        converged = 0\n",
+    "        while iter_cnt < self.max_iter or converged < self.max_converged:\n",
+    "            tmp_V = np.array(self.V, copy = True)\n",
     "            self.update_QV()\n",
+    "            if self.V.all() == tmp_V.all():\n",
+    "                converged += 1\n",
+    "            else:\n",
+    "                converged = 0\n",
     "            iter_cnt += 1\n",
+    "\n",
+    "        print(iter_cnt)\n",
     "        self.update_pi()\n",
-    "            \n",
+    "\n",
+    "    \n",
     "    def policy(self, state):\n",
     "        return self.pi[state[0], state[1]]\n",
     "\n",
+    "    \n",
     "    def print_pi(self):\n",
     "        direction = {0: '^', 1: '>', 2: 'V', 3: '<'}\n",
     "        for i in range(4):\n",
@@ -303,6 +314,7 @@
     "            print()\n",
     "        print()\n",
     "\n",
+    "    \n",
     "    def print_v(self):\n",
     "        for i in range(4):\n",
     "            for j in range(12):\n",
@@ -313,24 +325,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "^ ^ < ^ ^ > > ^ ^ < ^ > \n",
-      "^ > ^ V < ^ > < ^ > V > \n",
-      "V < ^ > V V > < < ^ > > \n",
-      "< < < ^ > > > < ^ V > ^ \n",
+      "1000\n",
+      "< > ^ < ^ > ^ ^ > > > > \n",
+      "< ^ V ^ V > < ^ > > > > \n",
+      "V V < ^ > > < ^ > > > V \n",
+      "< ^ > V > > < > ^ > > ^ \n",
       "\n",
-      "346.51\t351.02\t364.65\t-100.0\t-100.0\t1045.2\t2213.54\t2374.47\t2585.39\t2850.55\t-100.0\t9147.92\t\n",
-      "-100.0\t344.45\t387.65\t468.64\t517.75\t-100.0\t2099.34\t2142.14\t-100.0\t3175.33\t6874.69\t9241.33\t\n",
-      "296.19\t308.16\t-100.0\t517.75\t1203.32\t1650.27\t2009.0\t2020.57\t599.79\t-100.0\t8418.77\t9523.46\t\n",
-      "292.23\t296.19\t96.11\t-100.0\t1481.45\t1791.52\t1970.99\t1974.82\t-100.0\t4462.06\t9116.29\t10000.0\t\n",
+      "627.43\t-100.0\t-100.0\t1022.81\t-100.0\t6310.92\t6756.86\t7341.33\t8076.13\t8917.16\t9067.03\t9187.85\t\n",
+      "634.78\t-100.0\t1178.57\t2168.31\t4372.28\t5994.49\t6113.09\t-100.0\t7400.27\t8949.45\t9131.41\t9281.66\t\n",
+      "656.97\t679.83\t1506.15\t-100.0\t5089.57\t5744.13\t5776.2\t-100.0\t5402.51\t9074.01\t9325.27\t9565.01\t\n",
+      "649.4\t-100.0\t2708.73\t3968.05\t5309.55\t5638.81\t5649.43\t-100.0\t-100.0\t9225.32\t9565.01\t10000.0\t\n",
       "\n",
-      "Wins = 1\n"
+      "Wins = 2\n"
      ]
     }
    ],
@@ -349,7 +362,7 @@
     "\n",
     "for __ in range(max_iter_number):\n",
     "    try:\n",
-    "        # Choose an action (Replace this random action with your agent's policy)\n",
+    "        # Choose an action\n",
     "        action = mdp.policy(current_state)\n",
     "    \n",
     "        # Perform the action and receive feedback from the environment\n",
@@ -358,13 +371,13 @@
     "    \n",
     "        if done or truncated:\n",
     "            observatistopon, info = env.reset()\n",
+    "            current_state = (3, 0)\n",
     "        wins += done\n",
     "\n",
     "    except KeyboardInterrupt:\n",
     "        break\n",
     "\n",
     "print(\"Wins =\", wins)\n",
-    "# Close the environment\n",
     "env.close()\n",
     "exit(0)"
    ]
