add explain of class mdp

--- a/cliff_walking.ipynb
+++ b/cliff_walking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,8 +213,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Class MDP\n",
+    "\n",
+    "The MDP class represents a Markov Decision Process (MDP), which is a mathematical framework for modeling decision-making under uncertainty. An MDP consists of a set of states, a set of actions, a transition function, a reward function, and a discount factor.\n",
+    "\n",
+    "In this code, the __init__() method initializes the MDP object. It takes three parameters:\n",
+    "max_iterations: The maximum number of iterations to run the policy iteration algorithm.\n",
+    "discount_factor: The discount factor, which determines how much the agent values future rewards compared to immediate rewards.\n",
+    "cliff_positions: A list of positions that represent the cliffs.\n",
+    "The V array stores the value of each state, the Q array stores the value of taking each action in each state, and the pi array stores the policy, which is a mapping from each state to an action.\n",
+    "\n",
+    "The update_QV() method then updates the Q-function (Q) by adding the expected reward to the current Q-value for that state and action. This ensures that the Q-value for that state and action reflects the expected long-term reward.\n",
+    "The update_QV() method then updates the value function (V) by finding the maximum Q-value for that state. This ensures that the value function reflects the maximum expected long-term reward from any state.\n",
+    "The update_QV() method is called iteratively until the value function converges. This means that the value function no longer changes significantly between iterations.\n",
+    "\n",
+    "The update_pi() method updates the policy (pi) by iterating over each state (i, j) and action (k). It then determines the action that has the highest Q-value for that state and sets the policy for that state to that action. This ensures that the policy reflects the action that will maximize the expected long-term reward for that state.\n",
+    "\n",
+    "The run() method runs the policy iteration algorithm. It initially sets the value of the goal state to a high value and the value of the cliff states to a low value. It then repeatedly updates the value function (V) and the policy (pi) until it converges.\n",
+    "\n",
+    "The policy() method returns the action that should be taken in a given state. It does this by retrieving the corresponding action from the policy (pi) for that state."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +254,7 @@
     "        self.max_converged = 100\n",
     "\n",
     "        self.action_reward = -1\n",
-    "        self.goal_reward = 10000\n",
+    "        self.goal_reward = 4000\n",
     "        self.cliff_reward = -100\n",
     "\n",
     "    \n",
@@ -297,7 +322,6 @@
     "                converged = 0\n",
     "            iter_cnt += 1\n",
     "\n",
-    "        print(iter_cnt)\n",
     "        self.update_pi()\n",
     "\n",
     "    \n",
@@ -325,32 +349,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1000\n",
-      "< > ^ < ^ > ^ ^ > > > > \n",
-      "< ^ V ^ V > < ^ > > > > \n",
-      "V V < ^ > > < ^ > > > V \n",
-      "< ^ > V > > < > ^ > > ^ \n",
+      "< > > < ^ > ^ < ^ > > > \n",
+      "< > > < ^ < ^ > V > > > \n",
+      "^ > > ^ V ^ V > > > ^ > \n",
+      "V > < ^ < ^ > > > < ^ ^ \n",
       "\n",
-      "627.43\t-100.0\t-100.0\t1022.81\t-100.0\t6310.92\t6756.86\t7341.33\t8076.13\t8917.16\t9067.03\t9187.85\t\n",
-      "634.78\t-100.0\t1178.57\t2168.31\t4372.28\t5994.49\t6113.09\t-100.0\t7400.27\t8949.45\t9131.41\t9281.66\t\n",
-      "656.97\t679.83\t1506.15\t-100.0\t5089.57\t5744.13\t5776.2\t-100.0\t5402.51\t9074.01\t9325.27\t9565.01\t\n",
-      "649.4\t-100.0\t2708.73\t3968.05\t5309.55\t5638.81\t5649.43\t-100.0\t-100.0\t9225.32\t9565.01\t10000.0\t\n",
+      "-100.0\t472.24\t482.23\t486.68\t-100.0\t1185.25\t1644.22\t2138.42\t-100.0\t3465.45\t3572.7\t3654.11\t\n",
+      "-100.0\t473.8\t489.54\t502.99\t-100.0\t752.25\t-100.0\t2677.84\t3058.75\t3430.23\t3565.48\t3692.03\t\n",
+      "-100.0\t477.02\t501.27\t551.01\t668.48\t1197.33\t2210.57\t2920.53\t3163.9\t3366.75\t3542.8\t3806.55\t\n",
+      "467.73\t473.46\t481.5\t-100.0\t280.4\t-100.0\t2583.87\t3011.39\t3165.1\t3232.27\t-100.0\t4000.0\t\n",
       "\n",
-      "Wins = 2\n"
+      "Wins = 1\n"
      ]
     }
    ],
    "source": [
     "# Define the maximum number of iterations\n",
     "max_iter_number = 1000\n",
-    "iter_of_mdp = 1000\n",
+    "iter_of_mdp = 2000\n",
     "gama = 0.99\n",
     "current_state = (3, 0)\n",
     "wins = 0\n",
