added explanation of algorithm

--- a/cliff_walking.ipynb
+++ b/cliff_walking.ipynb
@@ -216,7 +216,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Class MDP\n",
+    "## Markov Decision Making Process\n",
+    "### What is the problem\n",
+    "The problem in general consist of a four tuple $(S, A, P, R)$ in which:\n",
+    "\n",
+    "$S$: set of states _(state space).\n",
+    "\n",
+    "$A(s)$: represents set of actions available in state $s \\in S$.\n",
+    "\n",
+    "$R(s, a, s')$: immidiate reward of going from $s$ to $s'$ with by action $a$.\n",
+    "\n",
+    "$P(s, a, s')$: probability of going to $s'$ when applying action $a$ in state $s$.\n",
+    "\n",
+    "Agent starts at an initial state $s_0$ and chooses some action $a_0$ and it will move to a new state $s'$ with probability $P(s_0, a_0, s')$ and immidiate reward $R(s_0, a_0, s')$. and this process continues untill the agent reaches a goal or a dead state, forcing it to halt.\n",
+    "\n",
+    "What we are looking for is a policy $\\pi : S \\rightarrow A$ which tells the agent what action to choose when being in an arbitrary state, so that it maximizes the expected total reward from playing once.\n",
+    "\n",
+    "### Solution and Algorithm\n",
+    "In order to solve problem we introduce two notations.$ V: S \\rightarrow \\mathbb{R} $, which assigns expected reward value when we're in some state to that state, and $Q: S \\times A \\rightarrow \\mathbb{R}$, which shows the expected reward value of perfoming some action in some state.\n",
+    "\n",
+    "Let's say we sart with a random policy $\\pi$ and we want to find $\\pi^*$ which is the best policy.\n",
+    "\n",
+    "This asgorithm iterates over and over until convergence in policy or we reach maximum number of iterations. In each iteration we do two things,  update $Q$, update $V$. here's how we do that:\n",
+    "\n",
+    "-----------------\n",
+    "\n",
+    "#### update $Q$:\n",
+    "We use preveous values of $V$ to update $Q$, with this expression:\n",
+    "\n",
+    "$$ Q(s, a) = \\sum_{s' \\in S} P(s, a, s')(R(s, a, s')+ \\gamma V(s')) $$\n",
+    "\n",
+    "where $0 \\lt \\gamma \\lt 1$ is the discount factor.\n",
+    "\n",
+    "------------------\n",
+    "\n",
+    "#### update $V$:\n",
+    "Using updated values of $Q$ we can update $V$ as follows:\n",
+    "\n",
+    "$$ V(s) = max_{a \\in A(s)} Q(s, a) $$\n",
+    "\n",
+    "------------------\n",
+    "\n",
+    "At the end we use $Q$ to find the policy this way:\n",
+    "$$\\pi(s) = argmax_{a \\in A(s)} Q(s, a) $$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementation\n",
+    "#### Class MDP\n",
     "\n",
     "The MDP class represents a Markov Decision Process (MDP), which is a mathematical framework for modeling decision-making under uncertainty. An MDP consists of a set of states, a set of actions, a transition function, a reward function, and a discount factor.\n",
     "\n",
