--- a/cliff_walking.ipynb
+++ b/cliff_walking.ipynb
@@ -478,11 +478,20 @@
    "metadata": {},
    "source": [
     "## Contributors\n",
-    "Mohamad Mazrouei\n",
+    "Team 1\n",
     "\n",
-    "Pouya Rahimpour\n",
+    "Mohamad Mazrouei 4003613056\n",
     "\n",
-    "Mohamadhosein Chahkandi"
+    "Pouya Rahimpour 4003613031\n",
+    "\n",
+    "Mohamadhosein Chahkandi 4003613019\n",
+    "\n",
+    "## Resources\n",
+    "Medium.com   \n",
+    "\n",
+    "cp-algorithms.com  \n",
+    "\n",
+    "youtube"
    ]
   }
  ],
